<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('kabupatens', function (Blueprint $table) {
            $table->uuid('id')->primary();
            $table->uuid('provinsi_id')->onUpdate('cascade')->onDelete('restrict');
            $table->string('nama');
            $table->enum('kategori', ["'Kabupaten'","'Kota'"]);
            $table->string('kode_kabupaten');
            $table->timestamps();
            $table->softDeletes();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('kabupatens');
    }
};
